Fixed search bar cut off

--- a/Thunderbird Beta theme/userChrome.css
+++ b/Thunderbird Beta theme/userChrome.css
@@ -62,11 +62,14 @@
 
 /****** other elements ******/
 
+#unifiedToolbarContent {
+    min-height: 29px !important;
+}
 global-search-bar:not([hidden]) {
     border-radius: 3px !important;
 }
 input[type="search"] {
-    min-height: 26px !important;
+    min-height: 27px !important;
     border: 1px solid #B8B8B8 !important;
     background: #ffffff !important;
     box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.3), 0 1px 0 0 rgba(255,255,255,0.8) !important;
